--- a/schedule/templates/schedule/partials/registration_actions.html
+++ b/schedule/templates/schedule/partials/registration_actions.html
@@ -35,6 +35,10 @@
             <hr class="my-3">
             <h6 class="mb-3">Specialized Registration</h6>
             
+            <button id="run-language-core-btn" class="btn btn-outline-info mb-3">
+                <i class="bi bi-layers"></i> 6th Grade Language & Core (New Algorithm)
+            </button>
+            
             <a href="{% url 'assign_language_courses' %}" class="btn btn-outline-success mb-2">
                 <i class="bi bi-translate"></i> Language Course Assignment
             </a>
